--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <h2>Website Reliability Check</h2>
-    <button id="analyze-btn">Analyze this page</button>
+    <button id="analyze-btn">Analyze this site</button>
     <div id="output"></div>
 
     <script src="script.js"></script>
